# learnMisraC2012

./: .gitignore  CMakeLists.txt  README.md  ValiParentheses.c  arrayChange.c  codeLearnIo.h  countBitOne.c  countBitOne.h  findMinMaxIndex.c  isLinear.c  isPowerOfFour.c  isPowerOfFour.h  leetcode.c  main.c  mergeTwoSortedArray.c  perfectSquare.c  removeElement.c  test.cpp  text_to_binary.c  text_to_binary.h
EmbeddedFreshInterview/: ProjectUseCase.eddx
gTest/: CmakeLists.txt  TEST_jumpGame.cpp  TEST_majorityElement.cpp  TEST_maximizeProfit.cpp  TEST_rotateArray.cpp  TEST_smallThanAdjacent.cpp  TEST_sortAndNotConsecutive.cpp  TEST_stringManipulation.cpp  kidWithCandies.cpp  test_code.cpp
inc/: capitalizeFirstChar.hpp  codeLearnIo.h  dynamicMemoryAllocation.hpp  embeddedSys.h  isPowerOfFour.h  jumpGame.h  kidWithCandies.h  majorityElement.h  maximizeProfit.h  mergeStringsAlternately.h  productExceptSelf.h  rotateArray.h  smallerThanAdjacent.hpp  sortAndNotConsecutive.hpp  stringManipulation.hpp
src/: CMakeLists.txt  capitalizeFirstChar.cpp  dynamicMemoryAllocation.cpp  findMinMaxIndex.c  jumpGame.c  kidWithCandies.c  leetcode.c  main.c  main.cpp  maximizeProfit.c  mergeStringsAlternately.c  mergeTwoSortedArray.c  perfectSquare.c  productExceptSelf.c  removeElement.c  rotateArray.c  smallerThanAdjacent.cpp  sortAndNotConsecutive.cpp  stringManipulation.cpp
